added bindings to specs, callback urls for apps

--- a/use-cases/elevator-co/event-apps/usage/usage.async-api-spec.yaml
+++ b/use-cases/elevator-co/event-apps/usage/usage.async-api-spec.yaml
@@ -119,10 +119,19 @@ components:
   parameters:
     topic_elem:
       schema:
-        type: string      
+        type: string
 channels:
   'apim/elevator-co/data-product/V1/json/elevator/info-screen/{resource_org_id}/{resource_region_id}/{resource_sub_region_id}/{resource_site_id}/{resource_type}/{resource_id}':
     subscribe:
+      bindings:
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
+        mqtt:
+          qos: 1
+          retain: true
+          bindingVersion: 0.1.0
       message:
         $ref: '#/components/messages/info-screen'
     parameters:
@@ -140,6 +149,15 @@ channels:
         $ref: '#/components/parameters/topic_elem'
   'apim/elevator-co/data-product/V1/json/elevator/journey/{resource_org_id}/{resource_region_id}/{resource_sub_region_id}/{resource_site_id}/{resource_type}/{resource_id}':
     subscribe:
+      bindings:
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
+        mqtt:
+          qos: 1
+          retain: true
+          bindingVersion: 0.1.0
       message:
         $ref: '#/components/messages/journey'
     parameters:
@@ -157,6 +175,15 @@ channels:
         $ref: '#/components/parameters/topic_elem'
   'apim/elevator-co/data-product/V1/json/elevator/call-wait/{resource_org_id}/{resource_region_id}/{resource_sub_region_id}/{resource_site_id}/{resource_type}/{resource_id}':
     subscribe:
+      bindings:
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
+        mqtt:
+          qos: 1
+          retain: true
+          bindingVersion: 0.1.0      
       message:
         $ref: '#/components/messages/call-wait'
     parameters:
