--- a/use-cases/elevator-co/event-apps/alarms-and-faults/alarms-and-faults.async-api-spec.yaml
+++ b/use-cases/elevator-co/event-apps/alarms-and-faults/alarms-and-faults.async-api-spec.yaml
@@ -161,6 +161,15 @@ components:
 channels:
   'apim/elevator-co/data-product/V1/json/elevator/critical-alarm/{resource_org_id}/{resource_region_id}/{resource_sub_region_id}/{resource_site_id}/{resource_type}/{resource_id}':
     subscribe:
+      bindings:
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
+        mqtt:
+          qos: 1
+          retain: true
+          bindingVersion: 0.1.0
       message:
         $ref: '#/components/messages/critical-alarm'
     parameters:
@@ -178,6 +187,15 @@ channels:
         $ref: '#/components/parameters/topic_elem'
   'apim/elevator-co/data-product/V1/json/elevator/fault/{resource_org_id}/{resource_region_id}/{resource_sub_region_id}/{resource_site_id}/{resource_type}/{resource_id}':
     subscribe:
+      bindings:
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
+        mqtt:
+          qos: 1
+          retain: true
+          bindingVersion: 0.1.0
       message:
         $ref: '#/components/messages/fault'
     parameters:
