--- a/use-cases/elevator-co/exposure/api-service-developer/api-event-services/maintenance/ApiEventService_maintenance.async-api-spec.yml
+++ b/use-cases/elevator-co/exposure/api-service-developer/api-event-services/maintenance/ApiEventService_maintenance.async-api-spec.yml
@@ -88,8 +88,15 @@ channels:
       bindings:
         smf:
           bindingVersion: ‘0.1.0’
-          type: request
           qos: guaranteed
+        mqtt:
+          bindingVersion: ‘0.1.0’
+          qos: 1
+          retain: true
+        http:
+          bindingVersion: ‘0.1.0’
+          type: request
+          method: POST
       message:
         $ref: '#/components/messages/maintenance'
     parameters:
