--- a/use-cases/elevator-co/exposure/api-service-developer/api-event-services/status-update/ApiEventService_status_update.async-api-spec.yml
+++ b/use-cases/elevator-co/exposure/api-service-developer/api-event-services/status-update/ApiEventService_status_update.async-api-spec.yml
@@ -51,6 +51,7 @@ channels:
         mqtt:
           bindingVersion: ‘0.1.0’
           qos: 1
+          retain: false
         http:
           bindingVersion: ‘0.1.0’
           type: request
