--- a/use-cases/elevator-co/consumption/developer/sample-async-apis/.experimental/api-maintenance.async-api-spec.yml
+++ b/use-cases/elevator-co/consumption/developer/sample-async-apis/.experimental/api-maintenance.async-api-spec.yml
@@ -156,7 +156,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -173,7 +173,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -190,7 +190,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -207,7 +207,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -229,7 +229,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -246,7 +246,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
@@ -268,7 +268,7 @@ servers:
         connectTimeout: 60
         keepAlive: 60
         lastWill:
-          topic: /last-wills
+          topic: apim/elevator-co/api/last-will
           qos: 1
           message: gone offline.
           retain: false
