--- a/.github/workflows/use-case-tests.yml
+++ b/.github/workflows/use-case-tests.yml
@@ -3,7 +3,7 @@
 # Copyright (c) 2021, Solace Corporation, Ricardo Gomez-Ulmke (ricardo.gomez-ulmke@solace.com)
 # ---------------------------------------------------------------------------------------------
 
-name: use-case-test
+name: use-case-tests
 on:
   # for testing
   workflow_dispatch:
@@ -28,7 +28,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        node: [ '12' ]
+        node: [ '12', '14' ]
     steps:
       - name: Check Auth
         if: github.event_name == 'workflow_dispatch' && github.actor != 'ricardojosegomezulmke' && github.actor != '195858'
