--- a/.github/workflows/use-case-tests.yml
+++ b/.github/workflows/use-case-tests.yml
@@ -73,6 +73,13 @@ jobs:
           cd "${UC_TEST_HOME_DIR}"
           npm install
 
+      - name: check
+        if: always()
+        run: |
+          cd "${UC_TEST_HOME_DIR}"
+          cat apim-system/local/server/start.server.sh
+          apim-system/local/server/start.server.sh
+
       - name: Run Tests
         run: |
           export APIM_BOOTSTRAP_PLATFORM_API_SERVER_ADMIN_USER=${{ secrets.PLATFORM_ADMIN_USER }}
