--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -22,13 +22,15 @@ services:
       - APP_ID=${APP_ID}
       - FILE_USER_REGISTRY=${FILE_USER_REGISTRY}
       - PLATFORM_PORT=3000
+      - ADMIN_USER=${ADMIN_USER}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
   demo-portal-server:
     container_name: $APIM_SYSTEM_PROJECT_NAME-demo-portal-server
     links:
       - platform-api-server
     image: solaceiotteam/apim-demo-portal:latest
     ports:
-      - ${APIM_SYSTEM_DEMO_PORTAL_SERVER_PORT}:8090
+      - ${DEMO_PORTAL_SERVER_PORT}:8090
     volumes:
       - portaldata:/portal/data
     restart: unless-stopped
@@ -44,7 +46,7 @@ services:
       #admin-name of platform api
       - solace_spa_adminuser=${DEMO_PORTAL_ADMIN_USER}
       #admin-password of platform api
-      - solace_spa_adminpassword=${DEMO_PORTAL_AADMIN_USER_PWD}
+      - solace_spa_adminpassword=${DEMO_PORTAL_ADMIN_USER_PWD}
       #login name of portal
       - solace_portal_login_user=${DEMO_PORTAL_API_USER}
       #password of portal
