added platform-api container tag/version

--- a/apim-system/aws/self-contained/vars/template_sensitive_ansible_vars.yml
+++ b/apim-system/aws/self-contained/vars/template_sensitive_ansible_vars.yml
@@ -1,4 +1,6 @@
 --- 
+# platform-api version
+platform_api_version: latest
 # portal version published in docker_hub
 portal_version: latest
 # sammode: dev -> login screen is disabled
