fixed variable issue

--- a/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
+++ b/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
@@ -8,7 +8,7 @@
   tasks:
     - include_vars: "{{config_root}}/{{config_vars_file}}"
 
-    - debug: msg="[config_root/config_vars_file : {{config_root}}/{{config_vars_file}}]]"
+    - debug: msg="[config_root/config_vars_filevi  {{config_root}}/{{config_vars_file}}]]"
       when: check_result.stat.exists
 
     - name: copy
