--- a/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
+++ b/apim-system/aws/single-node/ansible/deploy_docker_compose.yml
@@ -1,3 +1,12 @@
+- name: Load vars
+  hosts: platform_api
+  vars_files:
+   - "../vars/ansible_vars.yml"
+
+  tasks:
+    - include_vars: "{{config_root}}/{{config_vars_file}}"
+    - debug: msg="solace_spa_user {{solace_spa_user}}"
+
 - name: Install and start platform_api
   hosts: platform_api
   roles:
