removing docker images

--- a/apim-system/aws/single-node/ansible/roles/platform-api/tasks/main.yml
+++ b/apim-system/aws/single-node/ansible/roles/platform-api/tasks/main.yml
@@ -75,7 +75,7 @@
   shell: "docker rmi solaceiotteam/platform-api-server:{{platform_api_version}}"
 
 - name: Remove docker image for portal
-  shell: "docker rmi solaceiotteam/apim-demo-portal:{{portal_version}}""
+  shell: "docker rmi solaceiotteam/apim-demo-portal:{{portal_version}}"
 
 
 - name: removing images
